--- a/mbake-blog/posts/post-3/index.pug
+++ b/mbake-blog/posts/post-3/index.pug
@@ -6,7 +6,7 @@ block main
       h1= title
       div.date= date
   img.img-responsive(src=img_url)
-  .content
+  .content-post
     h2= subtitle
     p= paragraph_1
     p= paragraph_2
