create view model page

--- a/mbake-blog/home/header.pug
+++ b/mbake-blog/home/header.pug
@@ -22,7 +22,7 @@ mixin social()
         section.navbar-section.hide-md
           +link(ROOT + 'home', 'home')
           +link(ROOT + '#', 'contact')
-          +link(ROOT + '#', 'about')
+          +link(ROOT + 'view-model', 'View Model')
           +social(class="fab fa-facebook-f")
           +social(class="fab fa-instagram")
           +social(class="fab fa-twitter")
