--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -16,7 +16,7 @@ html(lang='en')
       
     script(src='https://cdn.jsdelivr.net/npm/riot@3.10.3/riot.min.js')
     script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
-    script(src=ROOT+ 'home/comps/card-tag.js') 
+    script(src=ROOT+ 'home/comps/card-comp.min.js') 
   body
     .container.grid-lg
       include /home/header
