--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -14,9 +14,16 @@ html(lang='en')
     link(href='https://fonts.googleapis.com/css?family=Bitter', rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet')
       
+    //- needed for client-side data
+    script(src='https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js')
+    script(src='https://www.gstatic.com/firebasejs/5.8.4/firebase-auth.js')
+    script(src='https://www.gstatic.com/firebasejs/5.8.4/firebase-firestore.js')
+    
+      
     script(src='https://cdn.jsdelivr.net/npm/riot@3.10.3/riot.min.js')
     script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
     script(src=ROOT+ 'home/comps/card-comp.min.js') 
+    script(src=ROOT+ 'view-model/comps/auth-comp.min.js')
   body
     .container.grid-lg
       include /home/header
