--- a/mbake-blog/home/comps/card-comp.pug
+++ b/mbake-blog/home/comps/card-comp.pug
@@ -10,7 +10,7 @@ card-comp
               div { date } | Eldred Braun
             .card-bottom
               a(href='{url}')
-                button.btn.btn-primary Read More
+                button.btn.btn-primary read More
             
 
   script.
