--- a/mbake-blog/home/footer.pug
+++ b/mbake-blog/home/footer.pug
@@ -1,6 +1,9 @@
 footer
-  .columns.flex-centered
-    .column.col-6.text-left
-      div Created by Sandra Alvarez / Style Guide / Image Licensing
-    .column.col-6.text-right
-      div © 2018 Evelin / All rights reserved / Powered by mBake
+  div 
+    | Created by 
+    strong  Sandra Alvarez
+    |  / Style Guide / Image Licensing
+  div 
+    | © 2018 Evelin / All rights reserved / Powered by
+    strong  mBake
+    
