--- a/mbake-blog/assets/css/style.css
+++ b/mbake-blog/assets/css/style.css
@@ -912,12 +912,18 @@ header{padding:20px 0;}
 header img{width:100px;}
 header .social-icon{text-align:center;width:30px;height:30px;line-height:30px;margin-right:4px;border-radius:2px;background-color:#fff;box-shadow:1px 1px 3px 0 #c1cddb;opacity:0.60;transition:all 400ms ease;}
 @media (max-width:840px){header a{margin-left:auto;}}
-footer{padding:20px 0;margin:50px 0;border-top:1px solid #d4deeb;}
+footer{display:flex;justify-content:space-between;color:#7c8499;font-size:13px;padding:20px 0;margin:50px;border-top:1px solid #d4deeb;}
+@media (max-width:600px){footer{flex-direction:column;text-align:center;}}
 h1,h2{font-family:'Bitter',serif;}
 h1{font-size:55px;line-height:60px;font-weight:500;}
 p{font-family:'Open Sans',sans-serif;color:#7c8499;line-height:25px;}
 a{color:#333;}
 .btn.btn-link{color:#222222;}
+.btn.btn-card{background:#fff;border-color:#f7f7f7;color:#fff;}
+.btn.btn-card:focus{box-shadow:0 0 0 0.1rem rgba(255,255,255,0.2);}
+.btn.btn-card:focus,.btn.btn-card:hover{background:#fafafa;border-color:#f2f2f2;color:#fff;}
+.btn.btn-card:active,.btn.btn-card.active{background:#ededed;border-color:#e6e6e6;color:#fff;}
+.btn.btn-card.loading::after{border-bottom-color:#fff;border-left-color:#fff;}
 .cards-container .column{padding:.4rem;}
 .cards-container .card{position:relative;border:20px solid #fff;color:#fff;width:auto;height:400px;background-size:cover;background-position:center;}
 .cards-container .card-top,.cards-container .card-bottom{position:absolute;padding:25px;left:0;}
@@ -928,4 +934,4 @@ a{color:#333;}
 .banner-home p{color:#7c8499;}
 .banner-home input,.banner-home button{border-radius:50px;}
 .banner .date{color:#7c8499;}
-.content-post{padding:50px 0;} /* mB v4.16.19 on 2019-02-27T21:50:22.387Z */
+.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-02-28T00:17:00.191Z */
