--- a/mbake-blog/assets/scss/_variables.sass
+++ b/mbake-blog/assets/scss/_variables.sass
@@ -3,6 +3,8 @@ $font-family: 'Poppins', sans-serif
 
 // Colors
 $mine-shaft: #222222
+$eclipse: #3b3b3b
 $white: #fff
+$black: #000
 $waterloo: #7c8499
 $acadia: #333
