--- a/mbake-blog/assets/scss/_components.scss
+++ b/mbake-blog/assets/scss/_components.scss
@@ -22,10 +22,37 @@
 		&-top {
 			top: 0;
 			background-image: linear-gradient(180deg, rgba(0, 0, 0, .72), hsla(0, 0%, 100%, 0));
+			button {
+				font-size: 10px;
+				padding: 5px 15px;
+				border-radius: 5px;
+				background-color: var(--color);
+				border-color: var(--color);
+				color: $white;
+				margin-bottom: 12px;
+				&:hover {
+					background-color: var(--color);
+					border-color: var(--color);
+				}
+			}
 		}
 
 		&-bottom {
 			bottom: 0;
+			button {
+				font-size: 12px;
+				padding: 12px 30px;
+				border-radius: 25px;
+				background-color: $white;
+				border-color: $white;
+				color: $black;
+				height: auto;
+				&:hover {
+					border-color: $eclipse;
+					background-color: $eclipse;
+					color: #fff;
+				}
+			}
 		}
 	}
 }
