--- a/mbake-blog/home/comps/card-comp.pug
+++ b/mbake-blog/home/comps/card-comp.pug
@@ -5,7 +5,7 @@ card-comp
         .column.col-6.col-sm-12
           .card(style="background-image: url('{img_url}')") 
             .card-top
-              button.btn.btn-primary(style="--color: {color}") button
+              button.btn.btn-primary(style="--color: {color}") { topic }
               h3 { title }
               div { date } | Eldred Braun
             .card-bottom
