--- a/mbake-blog/home/index.pug
+++ b/mbake-blog/home/index.pug
@@ -9,7 +9,7 @@ block main
         br 
         | images, galleries, videos, and audio.
       .columns
-        .column.col-6.col-xs-12
+        .column.col-6.col-md-9.col-xs-12
           .input-group
             input.form-input.input-lg(type='email', placeholder='Enter your email')
             button.btn.btn-primary.input-group-btn.btn-lg Subscribe
