--- a/mbake-blog/assets/scss/_typography.scss
+++ b/mbake-blog/assets/scss/_typography.scss
@@ -6,6 +6,14 @@ h1 {
   font-size: 55px;
   line-height: 60px;
   font-weight: 500;
+  @media (max-width: 840px) {
+    font-size: 45px;
+    line-height: 55px;
+  }
+  @media (max-width: 480px) {
+    font-size: 32px;
+    line-height: 42px;
+  }
 }
 
 p {
