--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -6,18 +6,13 @@ html(lang='en')
     title Blog Website
       
     //- icons
-    link(href='https://use.fontawesome.com/releases/v5.7.2/css/all.css', rel='stylesheet', integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr', crossorigin='anonymous')
+    link(href='https://use.fontawesome.com/releases/v5.7.2/css/all.css', rel='stylesheet', crossorigin='anonymous')
     link(href='/assets/css/style.css', rel='stylesheet')
       
     //- Fonts
     link(href='https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700' rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Bitter', rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet')
-      
-    //- needed for client-side data
-    script(src='https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js')
-    script(src='https://www.gstatic.com/firebasejs/5.8.4/firebase-auth.js')
-    script(src='https://www.gstatic.com/firebasejs/5.8.4/firebase-firestore.js')
       
     script(src='https://cdn.jsdelivr.net/npm/riot@3.10.3/riot.min.js')
     script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
