--- a/mbake-blog/home/footer.pug
+++ b/mbake-blog/home/footer.pug
@@ -1,9 +1,8 @@
 footer
   div 
-    | Created by 
-    strong  Sandra Alvarez
-    |  / Style Guide / Image Licensing
-  div 
-    | © 2018 Evelin / All rights reserved / Powered by
+    | Copyright © 2019 
     strong  mBake
+    |  All Rights Reserved
+  div 
+    include social.pug
     
