--- a/mbake-blog/home/header.pug
+++ b/mbake-blog/home/header.pug
@@ -1,35 +1,9 @@
-mixin link(path, name)
-  a.btn.btn-link(href=path)= name
+include nav.pug
 
-mixin social()
-  a.social-icon(href='#')
-    i(class!=attributes.class)
-
-.off-canvas.flex-centered
-  a.off-canvas-toggle.btn.btn-primary.btn-action.show-md(href='#sidebar-id')
-    i.icon.icon-menu
-      
-  #sidebar-id.off-canvas-sidebar
-    ul.nav
-      li.nav-item.active
-        +link(ROOT + 'home', 'home')
-      li.nav-item
-        +social(class="fab fa-facebook-f")
-        +social(class="fab fa-instagram")
-        +social(class="fab fa-twitter")
-        +social(class="fab fa-google-plus-g")
-    
-  a.off-canvas-overlay(href='#close')
-  
-  .off-canvas-content.px-2
-      header.navbar
-        section.navbar-section
-          a.mr-2.navbar-brand(href=ROOT + 'home')
-            img.img-responsive(src=ROOT + 'assets/img/blog/logo.png')
-        section.navbar-section.hide-md
-          +link(ROOT + 'home', 'home')
-          +social(class="fab fa-facebook-f")
-          +social(class="fab fa-instagram")
-          +social(class="fab fa-twitter")
-          +social(class="fab fa-google-plus-g")
-            
+.banner-home
+  div
+    h1 Lorem ipsum
+    p 
+      | Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do
+      br 
+      | incididunt ut labore et dolore magna
