--- a/mbake-blog/assets/css/style.css
+++ b/mbake-blog/assets/css/style.css
@@ -907,7 +907,8 @@ a.text-error:visited{color:#ff6003;}
 .icon-emoji{border:0.1rem solid currentColor;border-radius:50%;}
 .icon-emoji::before{border-radius:50%;box-shadow:-.17em -.1em,.17em -.1em;height:.15em;width:.15em;}
 .icon-emoji::after{border:0.1rem solid currentColor;border-bottom-color:transparent;border-radius:50%;border-right-color:transparent;height:.5em;transform:translate(-50%,-40%) rotate(-135deg);width:.5em;}
-body{font-family:"Poppins",sans-serif;background:linear-gradient(180deg,rgba(255,255,255,0.8),rgba(255,255,255,0.8)),url("../img/blog/background.png") repeat 70% 60%;background-color:#ccd7e4;background-size:cover;color:#333;}
+.home-wrapper{background-image:url("../img/home-bg.jpg") no-repeat center center;background-color:rgba(34,147,215,0.8);background-size:cover;color:#fff;text-align:center;}
+body{font-family:"Poppins",sans-serif;}
 @media (max-width:960px){.container{padding:0 15px;}}
 .off-canvas .off-canvas-toggle{top:auto;}
 .social-icon{text-align:center;width:30px;height:30px;line-height:30px;margin:0 4px;border-radius:2px;background-color:#fff;box-shadow:1px 1px 3px 0 #c1cddb;opacity:0.60;transition:all 400ms ease;}
@@ -934,10 +935,8 @@ a{color:#333;}
 .cards-container .card-bottom{bottom:0;}
 .cards-container .card-bottom button{font-size:12px;padding:12px 30px;border-radius:25px;background-color:#fff;border-color:#fff;color:#000;height:auto;}
 .cards-container .card-bottom button:hover{border-color:#3b3b3b;background-color:#3b3b3b;color:#fff;}
-.banner,.banner-home{display:flex;align-items:center;height:300px;}
+.banner,.banner-home{display:flex;align-items:center;justify-content:center;height:300px;}
 .banner-home{height:500px;}
-.banner-home p{color:#7c8499;}
-.banner-home input,.banner-home button{border-radius:50px;}
-.banner-home input.input-lg,.banner-home button.btn-lg{font-size:14px;}
+.banner-home p{color:#fff;}
 .banner .date{color:#7c8499;}
-.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-01T15:48:25.575Z */
+.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-04T17:24:21.448Z */
