--- a/mbake-blog/assets/scss/_layout.scss
+++ b/mbake-blog/assets/scss/_layout.scss
@@ -1,9 +1,22 @@
+// HOME
+.home-wrapper {
+	background-image: url('../img/home-bg.jpg') no-repeat center center;
+	background-color: rgba(34,147,215,0.8);
+	background-size: cover;
+	color: $white;
+	text-align: center;
+}
+
+
+
+
+
+
+
+
+
 body {
 	font-family: $font-family;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('../img/blog/background.png') repeat 70% 60%;
-  background-color: #ccd7e4;
-  background-size: cover;
-	color: $acadia;
 }
 
 .container {
@@ -29,6 +42,7 @@ body {
 	-webkit-transition: all 400ms ease;
 	transition: all 400ms ease;
 }
+
 
 header {
 	padding: 20px 0;
