--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -18,9 +18,11 @@ html(lang='en')
     script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
     script(src=ROOT+ 'home/comps/card-comp.min.js') 
   body
-    .container.grid-lg
-      include /home/header
-      
+    .home-wrapper
+      .container.grid-lg
+        include /home/header
+    
+    .container.grid-lg  
       block main
       
     include /home/footer
