--- a/mbake-blog/posts/post-2/index.pug
+++ b/mbake-blog/posts/post-2/index.pug
@@ -4,7 +4,10 @@ block main
   .banner
     div
       include:metaMD title.md
-      div.date= date
+      .date
+        i.far.fa-clock
+        |  
+        span=date 
   img.img-responsive(src=img_url)
   .content-post
     include:metaMD text.md
