--- a/mbake-blog/assets/css/style.css
+++ b/mbake-blog/assets/css/style.css
@@ -927,16 +927,11 @@ h1{font-size:55px;line-height:60px;font-weight:500;}
 p{font-family:'Open Sans',sans-serif;color:#7c8499;line-height:25px;}
 a{color:#333;}
 .cards-container .column{padding:.4rem;}
-.cards-container .card{position:relative;border:20px solid #fff;color:#fff;width:auto;height:400px;background-size:cover;background-position:center;}
-.cards-container .card-top,.cards-container .card-bottom{position:absolute;padding:25px;left:0;}
-.cards-container .card-top{top:0;background-image:linear-gradient(180deg,rgba(0,0,0,0.72),rgba(255,255,255,0));}
-.cards-container .card-top button{font-size:10px;padding:5px 15px;border-radius:5px;background-color:var(--color);border-color:var(--color);color:#fff;margin-bottom:12px;}
-.cards-container .card-top button:hover{background-color:var(--color);border-color:var(--color);}
-.cards-container .card-bottom{bottom:0;}
-.cards-container .card-bottom button{font-size:12px;padding:12px 30px;border-radius:25px;background-color:#fff;border-color:#fff;color:#000;height:auto;}
-.cards-container .card-bottom button:hover{border-color:#3b3b3b;background-color:#3b3b3b;color:#fff;}
-.banner,.banner-home{display:flex;align-items:center;justify-content:center;height:300px;}
-.banner-home{height:500px;}
+.cards-container .card{box-shadow:0 0.25rem 1rem rgba(48,55,66,0.15);border:0;}
+.cards-container .card button{font-size:10px;padding:5px 15px;border-radius:5px;background-color:#5dbcd2;border-color:#5dbcd2;color:#fff;margin-bottom:12px;}
+.cards-container .card button:hover{background-color:#5dbcd2;border-color:#5dbcd2;}
+.banner,.banner-home{display:flex;align-items:center;height:300px;}
+.banner-home{justify-content:center;height:500px;}
 .banner-home p{color:#fff;}
 .banner .date{color:#7c8499;}
-.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-04T17:24:21.448Z */
+.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-04T19:24:10.033Z */
