--- a/mbake-blog/assets/scss/_components.scss
+++ b/mbake-blog/assets/scss/_components.scss
@@ -6,52 +6,19 @@
 	}
 
 	.card {
-		position: relative;
-		border: 20px solid $white;
-		color: $white;
-		width: auto;
-		height: 400px;
-		background-size: cover;
-		background-position: center;
-		&-top, &-bottom {
-			position: absolute;
-			padding: 25px;
-			left: 0;
-		}
-
-		&-top {
-			top: 0;
-			background-image: linear-gradient(180deg, rgba(0, 0, 0, .72), hsla(0, 0%, 100%, 0));
-			button {
-				font-size: 10px;
-				padding: 5px 15px;
-				border-radius: 5px;
-				background-color: var(--color);
-				border-color: var(--color);
-				color: $white;
-				margin-bottom: 12px;
-				&:hover {
-					background-color: var(--color);
-					border-color: var(--color);
-				}
-			}
-		}
-
-		&-bottom {
-			bottom: 0;
-			button {
-				font-size: 12px;
-				padding: 12px 30px;
-				border-radius: 25px;
-				background-color: $white;
-				border-color: $white;
-				color: $black;
-				height: auto;
-				&:hover {
-					border-color: $eclipse;
-					background-color: $eclipse;
-					color: #fff;
-				}
+		box-shadow: 0 0.25rem 1rem rgba(48,55,66,.15);
+		border: 0;
+		button {
+			font-size: 10px;
+			padding: 5px 15px;
+			border-radius: 5px;
+			background-color: $turquoise;
+			border-color: $turquoise;
+			color: $white;
+			margin-bottom: 12px;
+			&:hover {
+				background-color: $turquoise;
+				border-color: $turquoise;
 			}
 		}
 	}
