--- a/mbake-blog/assets/scss/_layout.scss
+++ b/mbake-blog/assets/scss/_layout.scss
@@ -29,12 +29,12 @@ body {
 	top: auto;
 }
 
-.social-icon {
+.social-icon i {
 	text-align: center;
 	width: 30px;
 	height: 30px;
 	line-height: 30px;
-	margin: 0 4px;
+	margin: 0 5px;
 	border-radius: 2px;
 	background-color: $white;
 	box-shadow: 1px 1px 3px 0 #c1cddb;
