--- a/mbake-blog/assets/scss/_layout.scss
+++ b/mbake-blog/assets/scss/_layout.scss
@@ -1,16 +1,19 @@
 // HOME
 .home-wrapper {
-	background-image: url('../img/home-bg.jpg') no-repeat center center;
-	background-color: rgba(34,147,215,0.8);
+	background: linear-gradient(rgba(34,147,215, 0.8), rgba(34,147,215, 0.8)), url('../img/home-bg.jpg') no-repeat center center;
 	background-size: cover;
 	color: $white;
 	text-align: center;
+	position: relative;
+	.shape {
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		left: 0;
+		top: 80%;
+    fill: currentColor;
+	}
 }
-
-
-
-
-
 
 
 
