--- a/mbake-blog/assets/css/style.css
+++ b/mbake-blog/assets/css/style.css
@@ -914,12 +914,14 @@ body{font-family:"Poppins",sans-serif;}
 .off-canvas .off-canvas-toggle{top:auto;}
 .social-icon i{text-align:center;width:30px;height:30px;line-height:30px;margin:0 5px;border-radius:2px;background-color:#fff;box-shadow:1px 1px 3px 0 #c1cddb;opacity:0.60;transition:all 400ms ease;}
 header{padding:20px 0;}
+header .navbar-brand{color:#fff;}
+header .navbar-brand:visited{color:#fff;}
 header img{width:100px;}
 @media (max-width:840px){header a{margin-left:auto;}}
 footer{display:flex;justify-content:space-between;color:#7c8499;font-size:13px;padding:20px 0;margin:50px;border-top:1px solid #d4deeb;}
 @media (max-width:960px){footer{margin:50px 15px;}}
 @media (max-width:600px){footer{flex-direction:column;text-align:center;}}
-.btn.btn-link{color:#222222;}
+.btn.btn-link{color:#fff;}
 button{text-transform:uppercase;letter-spacing:1px;}
 h1,h2{font-family:'Bitter',serif;}
 h1{font-size:55px;line-height:60px;font-weight:500;}
@@ -935,4 +937,4 @@ a{color:#333;}
 .banner-home{justify-content:center;height:500px;}
 .banner-home p{color:#fff;}
 .banner .date{color:#7c8499;}
-.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-04T21:07:57.690Z */
+.content-post{padding:50px 0;} /* mB v4.16.23 on 2019-03-04T21:27:58.832Z */
