--- a/mbake-blog/assets/scss/_layout.scss
+++ b/mbake-blog/assets/scss/_layout.scss
@@ -15,9 +15,6 @@
 	}
 }
 
-
-
-
 body {
 	font-family: $font-family;
 }
@@ -49,6 +46,12 @@ body {
 
 header {
 	padding: 20px 0;
+	.navbar-brand {
+		color: $white;
+		&:visited {
+			color: $white;
+		}
+	}
 	img {
 	  width: 100px;
 	}
