--- a/mbake-blog/home/index.pug
+++ b/mbake-blog/home/index.pug
@@ -1,7 +1,7 @@
 extends /layout/layout
 
 block main
-    
+  #pagination-container.custom-pagination
   card-comp  
   
   script.
@@ -13,7 +13,43 @@ block main
        const tag = riot.mount('card-comp')[0]; 
        console.info('posts.items ------------>', posts.items);
        tag.render(posts.items);
+       
+       
+       depp.require(['cssJs'], function() {
+            pgContainer =[];
+            pgContCount=-1;
+            setupPg(guessShow(), posts);
+         });
+
+       function setupPg(perPage, posts_) {
+          console.info('PG');
+          pgContCount++;
+          console.info('s', pgContCount);
+          pgContainer[pgContCount] = $('#pagination-container');
+
+          perPage = 3;
+
+          pgContainer[pgContCount].pagination({
+             className: 'paginationjs-theme-blue',
+             dataSource: posts_,
+             locator: 'items',
+             pageSize: perPage,
+             autoHidePrevious: true,
+             autoHideNext: true,
+             callback: function(data, pagination) {
+                tag.render(data);
+             }
+          })
+
+       }//()
+
+       function guessShow() {
+          let n = ( $(window).width() * $(window).height()  ) / ( 300 * 400) * .9;
+          n = Math.round( n * .7);
+          console.info('g', n);
+          return n;
+       }
+       
      });
-  
   
   
