--- a/mbake-blog/layout/layout.pug
+++ b/mbake-blog/layout/layout.pug
@@ -2,6 +2,9 @@ doctype html
 html(lang='en')
   head
     meta(charset='utf-8')
+    script.
+       ROOT = '#{ROOT}' //- sets global pug and .js from dat.yaml
+       let _start = Date.now()
     meta(content='width=device-width,initial-scale=1', name='viewport')
     title Blog Website
       
@@ -14,9 +17,13 @@ html(lang='en')
     link(href='https://fonts.googleapis.com/css?family=Bitter', rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet')
       
-    script(src='https://cdn.jsdelivr.net/npm/riot@3.10.3/riot.min.js')
+    script(src='https://cdn.jsdelivr.net/npm/johnnydepp@0.0.3/dist/depp.min.js')
+    script(src='https://cdn.jsdelivr.net/npm/riot@3.13.2/riot.min.js')
     script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
+    script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js')
     script(src=ROOT+ 'home/comps/card-comp.min.js') 
+    script(src= ROOT + 'assets/js/setup.js')
+    
   body
     
     include /home/header
