--- a/mbake-blog/home/index.pug
+++ b/mbake-blog/home/index.pug
@@ -30,7 +30,7 @@ block main
           perPage = 3;
 
           pgContainer[pgContCount].pagination({
-             className: 'paginationjs-theme-blue',
+             className: 'paginationjs-theme-blue paginationjs-big',
              dataSource: posts_,
              locator: 'items',
              pageSize: perPage,
