--- a/mbake-blog/assets/scss/_components.scss
+++ b/mbake-blog/assets/scss/_components.scss
@@ -12,13 +12,13 @@
 			font-size: 10px;
 			padding: 5px 15px;
 			border-radius: 5px;
-			background-color: $turquoise;
-			border-color: $turquoise;
+			background-color: #289de9;
+			border-color: #289de9;
 			color: $white;
 			margin-bottom: 12px;
 			&:hover {
-				background-color: $turquoise;
-				border-color: $turquoise;
+				background-color: #289de9;
+				border-color: #289de9;
 			}
 		}
 	}
