--- a/mbake-blog/home/comps/card-comp.pug
+++ b/mbake-blog/home/comps/card-comp.pug
@@ -2,7 +2,7 @@ card-comp
   .cards-container 
     .columns
       virtual(each='{items}')
-        .column.col-6.col-sm-12
+        .column.col-4.col-md-6.col-.col-sm-12
           .card
             .card-image
               a(href='{url}')
