--- a/mbake-blog/home/nav.pug
+++ b/mbake-blog/home/nav.pug
@@ -17,8 +17,8 @@ mixin link(path, name)
   .off-canvas-content.px-2
       header.navbar
         section.navbar-section
-          a.mr-2.navbar-brand(href=ROOT + 'home') mBake
-            //- img.img-responsive(src=ROOT + 'assets/img/blog/logo.png')
+          a.mr-2.navbar-brand(href=ROOT + 'home') 
+            h2 mBake
         section.navbar-section.hide-md
           +link(ROOT + 'home', 'home')
           include social.pug
