--- a/mbake-blog/assets/scss/_layout.scss
+++ b/mbake-blog/assets/scss/_layout.scss
@@ -31,8 +31,8 @@ body {
 	border-color: $white;
 	color: $black;
 	&:hover {
-		background-color: #3F3FA0;
-		border-color: #3F3FA0;
+		background-color: #222222;
+		border-color: #222222;
 	}
 }
 
